[gd_scene load_steps=13 format=3 uid="uid://dhqm12i2l1mk3"]

[ext_resource type="Script" path="res://play_area.gd" id="1_vr8wc"]
[ext_resource type="PackedScene" uid="uid://b5j3xh8o6vjb7" path="res://card.tscn" id="2_7a0j3"]
[ext_resource type="Texture2D" uid="uid://dsrh8hv3p5ynj" path="res://art/banner11.png" id="2_r1p4o"]
[ext_resource type="Texture2D" uid="uid://bqtsxypqvqgn7" path="res://art/message_fantastic.png" id="3_6y8j5"]
[ext_resource type="AudioStream" uid="uid://dajbrjqhd4cfq" path="res://audio/Success5.wav" id="4_msw78"]
[ext_resource type="PackedScene" uid="uid://8mqeigswc8xo" path="res://target_arrow.tscn" id="5_mwfss"]
[ext_resource type="PackedScene" uid="uid://dcndxqjr252nt" path="res://button_box.tscn" id="6_fgok2"]
[ext_resource type="PackedScene" uid="uid://borx3d7ssd3gt" path="res://mash_visuals.tscn" id="7_i7mvp"]
[ext_resource type="Texture2D" uid="uid://b1n8t1ev6itdl" path="res://art/money_dollar_coin2.png" id="8_esygr"]

[sub_resource type="Animation" id="Animation_f7cgj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 2.31)]
}

[sub_resource type="Animation" id="Animation_g6gj7"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -127.395)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.525), Vector2(0.6, 1), Vector2(0.6, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tmucx"]
_data = {
"RESET": SubResource("Animation_f7cgj"),
"show": SubResource("Animation_g6gj7")
}

[node name="PlayArea" type="Node2D"]
script = ExtResource("1_vr8wc")
difficulty_up_interval = 1
mash_multiplier = 70

[node name="Banner11" type="Sprite2D" parent="."]
position = Vector2(210, 582)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("2_r1p4o")

[node name="Card1" parent="." instance=ExtResource("2_7a0j3")]
z_index = 10
position = Vector2(210, 131)

[node name="Card2" parent="." instance=ExtResource("2_7a0j3")]
z_index = 10
position = Vector2(210, 299)

[node name="Card3" parent="." instance=ExtResource("2_7a0j3")]
z_index = 10
position = Vector2(210, 467)

[node name="Card4" parent="." instance=ExtResource("2_7a0j3")]
z_index = 10
position = Vector2(210, 635)

[node name="Card5" parent="." instance=ExtResource("2_7a0j3")]
z_index = 10
position = Vector2(210, 803)

[node name="CongratsSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_msw78")

[node name="CongratsAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Congrats")
libraries = {
"": SubResource("AnimationLibrary_tmucx")
}

[node name="TargetArrows" type="Node2D" parent="."]
z_index = 20

[node name="TargetArrow1" parent="TargetArrows" instance=ExtResource("5_mwfss")]
position = Vector2(107, 79)

[node name="TargetArrow2" parent="TargetArrows" instance=ExtResource("5_mwfss")]
position = Vector2(107, 246)

[node name="TargetArrow3" parent="TargetArrows" instance=ExtResource("5_mwfss")]
position = Vector2(107, 415)

[node name="TargetArrow4" parent="TargetArrows" instance=ExtResource("5_mwfss")]
position = Vector2(107, 582)

[node name="TargetArrow5" parent="TargetArrows" instance=ExtResource("5_mwfss")]
position = Vector2(107, 750)

[node name="ButtonBox" parent="." instance=ExtResource("6_fgok2")]
z_index = 4096
position = Vector2(211, 980)
scale = Vector2(1.21711, 1.21711)

[node name="MashVisuals" parent="." instance=ExtResource("7_i7mvp")]
position = Vector2(-40, 278)

[node name="Congrats" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 30
position = Vector2(211, 739)
scale = Vector2(1, 2.31)
texture = ExtResource("3_6y8j5")

[node name="MashCoins" type="CPUParticles2D" parent="."]
position = Vector2(212, 509)
emitting = false
amount = 30
lifetime = 2.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("8_esygr")
direction = Vector2(2.08165e-12, -1)
spread = 103.33
gravity = Vector2(2.08165e-12, 2700)
initial_velocity_min = 342.6
initial_velocity_max = 814.82
angular_velocity_min = 53.33
angular_velocity_max = 93.33
scale_amount_min = 0.5
scale_amount_max = 0.5

[node name="MashCoolDownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="result" from="Card1" to="." method="_on_card_1_result"]
[connection signal="result" from="Card2" to="." method="_on_card_2_result"]
[connection signal="result" from="Card3" to="." method="_on_card_3_result"]
[connection signal="result" from="Card4" to="." method="_on_card_4_result"]
[connection signal="result" from="Card5" to="." method="_on_card_5_result"]
[connection signal="mash_complete" from="MashVisuals" to="." method="_on_mash_visuals_mash_complete"]
[connection signal="timeout" from="MashCoolDownTimer" to="." method="_on_mash_cool_down_timer_timeout"]

[editable path="MashVisuals"]
